--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@arcgis/core": "^4.23.7",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
     "@testing-library/jest-dom": "^5.16.2",
@@ -13,10 +14,13 @@
     "@testing-library/user-event": "^13.5.0",
     "highcharts": "^10.0.0",
     "highcharts-react-official": "^3.1.0",
+    "moment": "^2.29.3",
+    "oidc-react": "^1.5.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.5",
+    "react-fontawesome": "^1.7.1",
     "react-google-charts": "^4.0.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
